; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_phy.c_rtw_phy_write_rf_reg_mix.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_phy.c_rtw_phy_write_rf_reg_mix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtw_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rtw_phy_write_rf_reg_mix(%struct.rtw_dev* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.rtw_dev*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.rtw_dev* %0, %struct.rtw_dev** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %9, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %5
  %15 = load %struct.rtw_dev*, %struct.rtw_dev** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %11, align 4
  %20 = call i32 @rtw_phy_write_rf_reg(%struct.rtw_dev* %15, i32 %16, i32 %17, i32 %18, i32 %19)
  store i32 %20, i32* %6, align 4
  br label %28

21:                                               ; preds = %5
  %22 = load %struct.rtw_dev*, %struct.rtw_dev** %7, align 8
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %11, align 4
  %27 = call i32 @rtw_phy_write_rf_reg_sipi(%struct.rtw_dev* %22, i32 %23, i32 %24, i32 %25, i32 %26)
  store i32 %27, i32* %6, align 4
  br label %28

28:                                               ; preds = %21, %14
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}

declare dso_local i32 @rtw_phy_write_rf_reg(%struct.rtw_dev*, i32, i32, i32, i32) #1

declare dso_local i32 @rtw_phy_write_rf_reg_sipi(%struct.rtw_dev*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
